Use title_img from frontmatter in content lists

--- a/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
@@ -9,6 +9,7 @@ level: ""
 course: ""
 topic: ""
 images: []
+title_img: ""
 ---
 
 De beduidende cijfers zijn de cijfers in een getal **vanaf het eerste cijfer 
