--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -17,6 +17,7 @@ images:
         "/lessen/fysica/grootheden_eenheden/benaderingsregels/img/lego_100_correct_margin.png",
         "/lessen/fysica/grootheden_eenheden/benaderingsregels/img/lego_100_wrong_margin.png",
     ]
+title_img: "/lessen/fysica/grootheden_eenheden/benaderingsregels/img/lego_meetlat.png"
 ---
 
 Als we berekeningen doen met metingen, moeten we altijd in ons achterhoofd
