--- a/src/content/lessen/fysica/grootheden_eenheden/formules_omvormen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/formules_omvormen/index.mdx
@@ -9,6 +9,7 @@ level: "3M"
 course: "Fysica"
 topic: "grootheden_eenheden"
 images: []
+title_img: ""
 ---
 
 Fysica levert een wiskundige beschrijving van bepaalde eigenschappen en onderdelen van de wereld en het heelal rondom ons. Die beschrijvingen schrijven we neer in **formules**. Zulke formules tonen een **wiskundig verband tussen [grootheden](intro)**. Een eenvoudige formule is bijvoorbeeld hoe we massadichtheid kunnen berekenen:
