--- a/src/content/lessen/fysica/grootheden_eenheden/intro/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/intro/index.mdx
@@ -9,6 +9,7 @@ level: "3M"
 course: "Fysica"
 topic: "grootheden_eenheden"
 images: []
+title_img: ""
 ---
 
 We gebruiken **eenheden** om **grootheden** te beschrijven. Zo gebruiken we
