--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -9,6 +9,7 @@ level: "3M"
 course: "Fysica"
 topic: "grootheden_eenheden"
 images: []
+title_img: ""
 ---
 
 Het wordt snel lastig om heel grote of heel kleine getallen te lezen of te
