--- a/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
@@ -9,6 +9,7 @@ level: ""
 course: ""
 topic: ""
 images: []
+title_img: ""
 ---
 
 We kunnen grootheden zoals _lengte_ beschrijven met eenheden zoals _meter_. In een vorige les zagen we dat elke [grootheid een officiële SI-eenheid heeft](intro#si-eenheden-maken-duidelijke-afspraken). De officiële eenheid van _tijd_ is bijvoorbeeld de seconde.
