--- a/src/content/lessen/fysica/grootheden_eenheden/wetenschappelijke_notatie/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/wetenschappelijke_notatie/index.mdx
@@ -9,6 +9,7 @@ level: ""
 course: ""
 topic: ""
 images: []
+title_img: ""
 ---
 
 _Wetenschappelijke schrijfwijze_ is een manier om getallen te noteren. Het houdt in dat je **de komma verschuift tot die na het eerste [beduidend cijfer](beduidende_cijfers)** staat. Om het getal gelijk te houden, moet je samen met het verschuiven van de komma ook een [macht van 10](machten_van_10) toevoegen.
