--- a/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
@@ -13,6 +13,7 @@ images:
         "/lessen/fysica/krachten_1/krachtvector/img/aangrijpingspunt.png",
         "/lessen/fysica/krachten_1/krachtvector/img/grootte_richting_zin.png",
     ]
+title_img: "/lessen/fysica/krachten_1/krachtvector/img/krachtvector.png"
 ---
 
 [Kracht](intro) is een maat voor hoe er geduwd of getrokken wordt. Een van
