--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -13,6 +13,7 @@ images:
         "/lessen/fysica/krachten_1/normaalkracht_en_gewicht/img/gewicht_maria.png",
         "/lessen/fysica/krachten_1/normaalkracht_en_gewicht/img/gewicht_vs_normaalkracht.png",
     ]
+title_img: "/lessen/fysica/krachten_1/normaalkracht_en_gewicht/img/staan_kapstok.png"
 ---
 
 Wanneer je met je voeten op de grond staat, ondersteunt de grond jou. Wanneer
