--- a/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
@@ -9,6 +9,7 @@ images:
         "/lessen/fysica/krachten_1/resulterende_kracht/img/maria_drop_krachten.png",
         "/lessen/fysica/krachten_1/resulterende_kracht/img/add_krachten.png",
     ]
+title_img: "/lessen/fysica/krachten_1/resulterende_kracht/img/maria_drop.png"
 ---
 
 Er kunnen meerdere [krachten](intro) tegelijk inwerken op een voorwerp. Om
