--- a/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
@@ -12,6 +12,7 @@ images:
         "/lessen/fysica/krachten_1/zwaartekracht/img/zwaartekracht_bowlingbal_maan_oefening.png",
         "/lessen/fysica/krachten_1/zwaartekracht/img/zwaartekracht_voetbal_aarde_oefening.png",
     ]
+title_img: "/lessen/fysica/krachten_1/zwaartekracht/img/zwaartekracht_bowlingbal.png"
 ---
 
 Wanneer je springt, duurt het niet lang voor je terug met beide voetjes op de grond staat. Dat komt door de **zwaartekracht**. De aarde trekt alles naar zich toe. In deze les leren we hoe je de zwaartekracht kan tekenen op voorwerpen en hoe je de grootte ervan kan berekenen.
