--- a/src/content/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/index.mdx
@@ -17,6 +17,7 @@ images:
         "/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/img/orange.png",
         "/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/img/licht_doorlaten.png",
     ]
+title_img: "/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/img/white_light.png"
 ---
 
 Een [donker lichaam](lichtbronnen#donkere-lichamen) is een voorwerp dat
