--- a/src/content/lessen/fysica/lichtstralen/beeldvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/beeldvorming/index.mdx
@@ -20,6 +20,7 @@ images:
         "/lessen/fysica/lichtstralen/beeldvorming/img/camera_obscura.png",
         "/lessen/fysica/lichtstralen/beeldvorming/img/camera_obscura_large_aperture.png",
     ]
+title_img: "/lessen/fysica/lichtstralen/beeldvorming/img/orange.png"
 ---
 
 Wanneer wit licht [invalt op een sinaasappel](absorberen_reflecteren_doorlaten#reflectie-absorptie)
