--- a/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
@@ -18,6 +18,7 @@ images:
         "/lessen/fysica/lichtstralen/schaduwvorming/img/diffuse_bron_straal_schaduwen_resultaat.png",
         "/lessen/fysica/lichtstralen/schaduwvorming/img/niet_puntvormige_lichtbron.png",
     ]
+title_img: "/lessen/fysica/lichtstralen/schaduwvorming/img/schaduw_intro.png"
 ---
 
 Om een flatterend portret te maken, kiezen fotografen meestal voor _diffuse
