--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -10,6 +10,7 @@ level: "2M"
 course: "wiskunde"
 topic: "algebra"
 images: []
+title_img: ""
 ---
 
 Een [vergelijking](intro) is de gelijkheid van een _linkerlid_ en een _rechterlid_ waarbij het linkerlid en/of het rechterlid een of meerdere onbekenden bevat. Vaak is er maar één onbekende, namelijk $x$.
