--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -10,6 +10,7 @@ level: "2M"
 course: "wiskunde"
 topic: "algebra"
 images: []
+title_img: ""
 ---
 
 Een [vergelijking](intro) van de eerste graad in één onbekende $x$ is een vergelijking
