--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -12,6 +12,7 @@ differentiequotiënt. Zo begrijp je
 aan het einde van de les helemaal waar de definitie van afgeleiden vandaan
 komt."
 images: []
+title_img: ""
 ---
 
 Met de afgeleide berekenen we de **ogenblikkelijke verandering** van een
