--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -10,6 +10,7 @@ de snelheid van een racewagen. We beginnen met het intuïtief opbouwen van een
 algemene formule om snelheid te berekenen en maken zo een intuïtieve overstap
 naar de formule voor het differentiequotiënt."
 images: ['/lessen/wiskunde/afgeleiden_1/differentiequotient/img/drag_racing.png', '/lessen/wiskunde/afgeleiden_1/differentiequotient/img/maria_race_top.png', '/lessen/wiskunde/afgeleiden_1/differentiequotient/img/maria_avg_speed_1s_3s.png', '/lessen/wiskunde/afgeleiden_1/differentiequotient/img/maria_race_function.png', '/lessen/wiskunde/afgeleiden_1/differentiequotient/img/diff_quot_intuitie.png', '/lessen/wiskunde/afgeleiden_1/differentiequotient/img/graph_delta_fx_delta_x.png', '/lessen/wiskunde/afgeleiden_1/differentiequotient/img/graph_delta_fa+delta_x_delta_x.png']
+title_img: "/lessen/wiskunde/afgeleiden_1/differentiequotient/img/drag_racing.png"
 ---
 
 Vooraleer we aan afgeleiden kunnen beginnen, moeten we het
