--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -5,6 +5,7 @@ weight: 2
 wiski: "http://wiski.be/oefenen/rekenen-met-lettervormen/take"
 draft: false
 images: []
+title_img: ""
 ---
 
 Een eenterm is een **product van getallen en/of [variabelen](variabelen)**.
