--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -10,6 +10,7 @@ rekenregels eerst nog eens."
 tags: ["eenterm", "macht van eenterm", "wortel van eenterm", "vierkantswortel
 van eenterm", "bewerkingen met eentermen"]
 images: []
+title_img: ""
 ---
 
 Om de machten en wortels van eentermen te kunnen berekenen, is het belangrijk
