--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -12,6 +12,7 @@ tags: ["eenterm", "eentermen delen", "eentermen vermenigvuldigen", "product van
 eentermen", "quotient van eentermen", "vermenigvuldigen met zelfde grondtal",
 "delen met zelfde grondtal", "bewerkingen met eentermen"]
 images: []
+title_img: ""
 ---
 
 Om eentermen met elkaar te vermenigvuldigen of te delen door elkaar, is het
