--- a/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
@@ -13,6 +13,7 @@ images:
         "/lessen/wiskunde/eentermen/variabelen/img/emoji_formula.png",
         "/lessen/wiskunde/eentermen/variabelen/img/living_area_computed.png",
     ]
+title_img: "/lessen/wiskunde/eentermen/variabelen/img/living_no_dims.png"
 ---
 
 Pas wanneer een eenterm **variabelen** bevat, kunnen we eentermen gaan
