--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -5,6 +5,7 @@ weight: 3
 wiski: "http://wiski.be/oefenen/rekenen-met-lettervormen/take"
 draft: false
 images: []
+title_img: ""
 ---
 
 Een eenterm bestaat in principe enkel uit een [coëfficiënt en een
