--- a/src/content/lessen/wiskunde/functies/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/functies/grafiek/index.mdx
@@ -16,6 +16,7 @@ images:
         "/lessen/wiskunde/functies/grafiek/plt/loads_of_x.png",
         "/lessen/wiskunde/functies/grafiek/plt/no_fx.png",
     ]
+title_img: "/lessen/wiskunde/functies/grafiek/plt/single_x.png"
 ---
 
 We kunnen de waarden voor $\orange{x}$ en $\green{y}$ in een
