--- a/src/content/lessen/wiskunde/functies/intro/index.mdx
+++ b/src/content/lessen/wiskunde/functies/intro/index.mdx
@@ -9,6 +9,7 @@ level: 3M
 course: wiskunde
 topic: analyse
 images: ["/lessen/wiskunde/functies/intro/img/conveyor_plain.png"]
+title_img: "/lessen/wiskunde/functies/intro/img/conveyor_plain.png"
 ---
 
 Je kan een functie zien als een _machientje_ waar je _iets_ instopt en waar
