--- a/src/content/lessen/wiskunde/functies/waardentabel/index.mdx
+++ b/src/content/lessen/wiskunde/functies/waardentabel/index.mdx
@@ -9,6 +9,7 @@ level: 3M
 course: wiskunde
 topic: analyse
 images: []
+title_img: ""
 ---
 
 We kunnen ons nu helemaal laten gaan en allerlei waarden voor $x$ in
