--- a/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
@@ -7,6 +7,7 @@ wiski: "http://wiski.be/oefenen/volgorde-van-bewerkingen-0/take"
 tags: ["Rekenregels", "Volgorde van de bewerkingen"]
 categories: ["wiskunde", "getallen", "1e middelbaar"]
 images: []
+title_img: ""
 ---
 
 Over rekenregels gaan we vaak nogal snel over. De volledige wiskunde is echter
