--- a/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
@@ -17,6 +17,7 @@ images:
         "/lessen/wiskunde/vector_1/grafisch_optellen/img/kopstaart_summary.png",
         "/lessen/wiskunde/vector_1/grafisch_optellen/img/parallel_summary.png",
     ]
+title_img: "/lessen/wiskunde/vector_1/grafisch_optellen/img/verpl_1_2.png"
 ---
 
 Vectoren kun je, net als getallen, bij elkaar optellen. Maar hoe gaat dat in
