--- a/src/content/lessen/wiskunde/vector_1/intro/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/intro/index.mdx
@@ -13,6 +13,7 @@ images:
         "/lessen/wiskunde/vector_1/intro/img/vector_props.png",
         "/lessen/wiskunde/vector_1/intro/img/summary.png",
     ]
+title_img: "/lessen/wiskunde/vector_1/intro/img/vector_is_arrow.png"
 ---
 
 Over cijfers en getallen heb je al heel veel gehoord in je lessen wiskunde. Je
