--- a/src/content/lessen/wiskunde/vector_1/vectoriele_grootheden/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/vectoriele_grootheden/index.mdx
@@ -10,6 +10,7 @@ images:
         "/lessen/wiskunde/vector_1/vectoriele_grootheden/img/vec_examples.png",
         "/lessen/wiskunde/vector_1/vectoriele_grootheden/img/scal_examples.png",
     ]
+title_img: "/lessen/wiskunde/vector_1/vectoriele_grootheden/img/verplaatsingsvector_1.png"
 ---
 
 In de [vorige les](intro) leerden we dat vectoren pijlen zijn met een
