--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -13,6 +13,7 @@ vermenigvuldigen met een eenterm", "veelterm delen door een eenterm", "som van
 veeltermen", "verschil van veeltermen", "product van veeltermen", "product van
 een veelterm en een eenterm", "quotient van een veelterm en een eenterm"]
 images: []
+title_img: ""
 ---
 
 Net zoals je op getallen bewerkingen kan uitvoeren (optellen, aftrekken,
