--- a/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
@@ -5,6 +5,7 @@ wiski: "http://wiski.be/oefenen/merkwaardige-producten/take"
 weight: 5
 draft: false
 images: []
+title_img: ""
 ---
 
 Wat is $99^2$? Of $102^2$? Eens we de formules van **merkwaardige producten**
