--- a/src/content/lessen/wiskunde/veeltermen/veelterm/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/veelterm/index.mdx
@@ -8,6 +8,7 @@ description: "In deze les leren we wat een veelterm is en hoe je de graad van
 een veelterm eenvoudig kan vinden. We leren ook hoe je de graad per variabele
 kan vinden."
 images: []
+title_img: ""
 ---
 
 Een veelterm <Mute>(of polynoom)</Mute> is een **som van
