--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -10,6 +10,7 @@ met elkaar te kunnen vergelijken en bewerkingen met veeltermen te kunnen doen,
 is het belangrijk dat we leren om een veelterm te vereenvoudigen. In deze les
 leggen we stap voor stap uit hoe dat moet."
 images: []
+title_img: ""
 ---
 
 Voor we een veelterm beginnen gebruiken, zorgen we er best voor dat we hem zo
