--- a/src/content/lessen/wiskunde/verzamelingen/intro/index.mdx
+++ b/src/content/lessen/wiskunde/verzamelingen/intro/index.mdx
@@ -9,6 +9,7 @@ level: ""
 course: ""
 topic: ""
 images: []
+title_img: ""
 ---
 
 Je kan je een verzameling voorstellen als een grote, denkbeeldige zak waar bepaalde _dingen_ in zitten. De _dingen_ in de zak zijn de **elementen** van de verzameling. De denkbeeldige zak kan ook leeg zijn, dan bevat de verzameling geen elementen en spreken we van een _lege verzameling_. Maar het kan even goed zijn dat een verzameling oneidig veel elementen bevat. Vaak zullen de elementen in een verzameling getallen zijn, maar ze kunnen even goed kleuren of namen of zelfs andere verzamelingen zijn.
