--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -10,6 +10,7 @@ level: "2M"
 course: "wiskunde"
 topic: "algebra"
 images: []
+title_img: ""
 ---
 
 Een van de meest essentiële vaardigheden voor een uit-de-kluiten-gewassen wiskundige is het kunnen oplossen van **vergelijkingen**. Om te begrijpen _waarom_ het oplossen van vergelijkingen zo belangrijk is, heb je best al wat kennis van [functies](../functies/).
