--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -11,6 +11,7 @@ eigenschap, leggen we die ook nog eens extra uit in deze les."
 tags: ["eenterm", "eentermen optellen", "eentermen aftrekken", "verschil van
 eentermen", "som van eentermen", "bewerkingen met eentermen", "distributiviteit"]
 images: []
+title_img: ""
 ---
 
 Het optellen en aftrekken van eentermen zullen we later gebruiken bij het
