--- a/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
@@ -4,6 +4,7 @@ date: 2020-06-04T09:26:36+02:00
 weight: 3
 draft: true
 images: []
+title_img: ""
 ---
 
 Wanneer een veelterm [variabelen](variabelen) bevat, geeft de veelterm enkel een **beschrijving van een berekening**. De veelterm zegt enkel **hoe** je een uitkomst kan berekenen. Wanneer we echter de **variabelen vervangen** door getallen, kan de veelterm ook gelijk worden aan een getal. Dat getal noemen we een **getalwaarde van de veelterm**. In deze les leren we hoe we zo een getalwaarde kunnen berekenen.
