WIP try getting public JSON URL via static query

--- a/src/content/lessen/wiskunde/functies/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/functies/grafiek/index.mdx
@@ -39,6 +39,8 @@ In de laatste rij van die waardentabel is $\orange{x = 5}$ en $\green{y =
 $(\orange{5};~\green{1{,}5})$. <Mute>(Probeer eens op het puntje te
 klikken.)</Mute>
 
+<Bokeh plot="plt/single_x.json" />
+
 ![](plt/single_x.png)
 
 Zo kunnen we alle rijen in onze waardentabel voorstellen als puntjes in een
