Replace plt/... imgs with bokeh plots in lessen

--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -42,7 +42,7 @@ $$
 
 De [grafiek](../functies/grafiek) van deze functies ziet er als volgt uit:
 
-![](plt/snijpunt.png)
+<Bokeh plot="plt/snijpunt" />
 
 Het oranje punt duidt het <span class="orange">snijpunt</span> aan van de twee functies. Hoe kunnen we de coördinaten van dit snijpunt vinden?
 
@@ -146,7 +146,7 @@ En inderdaad, $f(\orange{4}) = -\orange{4} + 4 = 0$! De nulwaarde is dus
 $\orange{4}$ en het nulpunt is $(\orange{4}, 0)$ <Mute>(met een x- én
 y-coördinaat)</Mute>.  Dit kan je ook zien op onderstaande grafiek:
 
-![](plt/nulpunt.png)
+<Bokeh plot="plt/nulpunt" />
 
 ## Samengevat
 
