--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -106,7 +106,7 @@ $$
 
 Die grafiek ziet er zo uit:
 
-![](plt/fx.png)
+<Bokeh plot="plt/fx" />
 
 Om op deze grafiek het **domein** af te lezen, moet je de grafiek **projecteren
 op de x-as**. Het resultaat van de projectie is aangeduid **<span 
@@ -114,14 +114,14 @@ class="green">in het groen op de x-as</span>**. <Mute>We gaan ervan uit
 dat de grafiek oneindig blijft verder stijgen aan de rechterkant.</Mute> We zien 
 dan dat $\green{dom f = [-5; +\infty[}$.
 
-![](plt/dom.png)
+<Bokeh plot="plt/dom" />
 
 Het **beeld** <Mute>(of het bereik)</Mute> van diezelfde functie kunnen we
 vinden door de grafiek nu te **projecteren op de y-as**. Op de onderstaande
 grafiek zie je het resultaat van deze projectie
 **<span class="green">in het groen op de y-as</span>**.
 
-![](plt/bld.png)
+<Bokeh plot="plt/bld" />
 
 We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de 
 rechterkant. Je vindt dat $\green{bld f = [-6; +\infty[}$.
