--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -25,7 +25,7 @@ voor de y-waarden, vatten we samen in een **tekenschema** <Mute text='(ook wel
 functie](grafiek) is gegeven, kunnen we zien waar de functiewaarden <Mute
 text="(of de y-waarden)" /> _positief_, _negatief_ of _nul_ zijn.
 
-![](plt/tekenschema.png)
+<Bokeh plot="plt/tekenschema" />
 
 We zien op de grafiek:
 
