--- a/src/content/lessen/wiskunde/functies/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/functies/grafiek/index.mdx
@@ -39,14 +39,13 @@ In de laatste rij van die waardentabel is $\orange{x = 5}$ en $\green{y =
 $(\orange{5};~\green{1{,}5})$. <Mute>(Probeer eens op het puntje te
 klikken.)</Mute>
 
-<Bokeh plot="plt/single_x.json" />
+<Bokeh plot="plt/single_x" />
 
-![](plt/single_x.png)
 
 Zo kunnen we alle rijen in onze waardentabel voorstellen als puntjes in een
 assenstelsel.
 
-![](plt/multiple_x.png)
+<Bokeh plot="plt/multiple_x" />
 
 ## Veel puntjes vormen een curve
 
@@ -57,7 +56,7 @@ $\orange{-0{,}98}$, $\orange{-0{,}97}$ enzovoort tot $\orange{9}$). Wat gebeurt
 er als we die enorme hoeveelheid puntjes nu op een assenstelsel zetten? We
 krijgen deze mooie figuur:
 
-![](plt/loads_of_x.png)
+<Bokeh plot="plt/loads_of_x" />
 
 We hebben nu zoveel puntjes op ons assenstelsel dat we eigenlijk niet meer zien
 dat het _aparte_ puntjes zijn. Het zijn wel degelijk aparte puntjes <Mute
@@ -74,4 +73,4 @@ hieronder is een voorbeeld van een curve waar er voor bepaalde waarden van $x$
 functie van** $x$. Zonder het onderste stukje dat lijkt "terug te keren" is
 $y$ _wel_ een functie van $x$.
 
-![](plt/no_fx.png)
+<Bokeh plot="plt/no_fx" />
