Remove Mute shortcode from quote block

--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -89,7 +89,7 @@ _hooguit één_ $\green{\text{positie}}$ overeen. Daarom mogen we zeggen dat
 Maria's **positie een functie is van de tijd**.
 
 > Als je niet meer goed weet vanaf wanneer een verband tussen twee variabelen
-> <Mute>(zoals positie en tijd)</Mute> een functie is, kan je altijd onze
+> (zoals positie en tijd) een functie is, kan je altijd onze
 > [les over functies](../functies/intro) eens nalezen.
 
 We kunnen de **positie** die overeenkomt met tijdstip $\orange{x}$ dus **de
