--- a/src/content/lessen/wiskunde/vector_1/_index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/_index.mdx
@@ -5,5 +5,5 @@ weight: 6
 level: "3e middelbaar"
 topic: "algebra"
 images: []
-title_img: ""
+title_img: "/lessen/wiskunde/vector_1/intro/img/vector_is_arrow.png"
 ---
