Use title prop of Attention in content

--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -183,9 +183,7 @@ $$
 
 ## Samengevat
 
-<Attention>
-
-Benaderingsregels
+<Attention title="Benaderingsregels">
 
 -   De uitkomst van een **optelling of aftrekking** moet hetzelfde **aantal
     cijfers na de komma** hebben als het getal in de berekening met het kleinste
