--- a/src/content/lessen/fysica/krachten_1/intro/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/intro/index.mdx
@@ -93,9 +93,7 @@ in die puntmassa.
 
 ## Samengevat
 
-<Attention>
-
-Kracht
+<Attention title="Kracht">
 
 **Kracht** is een grootheid die beschrijft op welke manier er wordt **geduwd**
 tegen of **getrokken** aan een voorwerp. Wanneer een kracht inwerkt
@@ -104,9 +102,7 @@ op een voorwerp, kan de kracht een **verandering van de snelheid** en/of een
 
 </Attention>
 
-<Attention>
-
-Veld- en contactkrachten
+<Attention title="Veld- en contactkrachten">
 
 -   Een **veldkracht** is een kracht die **op afstand** werkt en het gevolg is
     van een krachtveld zoals het zwaartekrachtsveld;
