--- a/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
@@ -69,9 +69,7 @@ Voor de krachten die inwerken op Maria, ziet dat er als volgt uit:
 
 ## Samengevat
 
-<Attention>
-
-Krachten op een voorwerp
+<Attention title="Krachten op een voorwerp">
 
 Wanneer we _"de krachten op een voorwerp"_ tekenen, tekenen we alle krachten
 die **door andere voorwerpen** worden uitgeoefend **op dat voorwerp**.
@@ -80,9 +78,7 @@ die **door andere voorwerpen** worden uitgeoefend **op dat voorwerp**.
 
 </Attention>
 
-<Attention>
-
-Krachten samenleggen in massapunt
+<Attention title="Krachten samenleggen in massapunt">
 
 We leggen de krachten **samen in een massapunt**. Als massapunt kiezen we een punt dat ongeveer **in het midden van het voorwerp** ligt.
 
