--- a/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
@@ -90,17 +90,13 @@ van het flesje duwt.
 
 ## Samengevat
 
-<Attention>
-
-Vectoriële grootheden
+<Attention title="Vectoriële grootheden">
 
 Een vectoriële grootheid is een grootheid met een **grootte**, een **richting**
 en een **zin**.
 </Attention>
 
-<Attention>
-
-Kracht is een vector
+<Attention title="Kracht is een vector">
 
 Een **krachtvector** $\vec{F}$ heeft **vier eigenschappen**:
 
@@ -113,9 +109,7 @@ Een **krachtvector** $\vec{F}$ heeft **vier eigenschappen**:
 ![](img/grootte_richting_zin.png)
 </Attention>
 
-<Attention>
-
-Schrijfwijze voor krachten
+<Attention title="Schrijfwijze voor krachten">
 
 | Schrijf | Lees |
 |---------|------|
