--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -119,10 +119,7 @@ maken.
 
 ## Samengevat
 
-<Attention>
-
-Normaalkrachten
-
+<Attention title="Normaalkrachten">
 
 Een normaalkracht $\vec{F}_n$ is een kracht die geleverd wordt **door een
 ondersteuning** en inwerkt **op het ondersteunde voorwerp**. Een normaalkracht
@@ -130,10 +127,7 @@ staat **altijd loodrecht op het steunoppervlak**.
 
 </Attention>
 
-<Attention>
-
-Gewicht
-
+<Attention title="Gewicht">
 
 Het gewicht $\vec{F}_g$ van een ondersteund voorwerp is de **kracht** die
 geleverd wordt **door een ondersteund voorwerp** en inwerkt **op de
