--- a/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
@@ -62,10 +62,9 @@ we verwachten. 👍
 
 ## Samengevat
 
-<Attention>
-
-Resulterende kracht tekenen
+<Attention title="Resulterende kracht tekenen">
 
 Wanneer er verschillende krachten inwerken op een voorwerp, kunnen we de
 resulterende kracht tekenen door die krachten vectorieel op te tellen.
+
 </Attention>
