--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -128,9 +128,7 @@ $$
 
 ## Samengevat
 
-<Attention>
-
-Vergelijking
+<Attention title="Vergelijking">
 
 Een vergelijking is iets van de vorm
 
@@ -141,9 +139,7 @@ $$
 Waarbij $\text{linkerlid}$ en $\text{rechterlid}$ een of meerdere **onbekenden** bevatten. Vaak is er maar één onbekende, namelijk $x$.
 </Attention>
 
-<Attention>
-
-Oplossingsverzameling
+<Attention title="Oplossingsverzameling">
 
 Een vergelijking is _opgelost_ als je de waarden van de onbekenden vindt waarvoor de gelijkheid klopt. De _oplossingsverzameling_ is de verzameling van die waarden.
 </Attention>
