--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -162,16 +162,12 @@ Daar komt het oplossen van vergelijkingen op neer: de vergelijking stap per stap
 
 ## Samengevat
 
-<Attention>
-
-Omvormen
+<Attention title="Omvormen">
 
 Door op het linker- en rechterlid van een vergelijking **dezelfde bewerking** uit te voeren, **vormen we een vergelijking om** naar een nieuwe vergelijking die even juist is als de oorspronkelijke vergelijking.
 </Attention>
 
-<Attention>
-
-Oplossen door om te vormen
+<Attention title="Oplossen door om te vormen">
 
 We kunnen een vergelijking met onbekende $x$ oplossen door die vergelijking **om te vormen naar $x = \text{(een getal)} $.**
 </Attention>
