--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -188,9 +188,7 @@ is $V = \{-\frac{14}{5}\}$.
 
 ## Samengevat
 
-<Attention>
-
-Oplossen van een vergelijking in de eerste graad met één onbekende
+<Attention title="Oplossen van een vergelijking in de eerste graad met één onbekende">
 
 Om een vergelijking op te lossen van de eerste graad met één onbekende, volgen we drie stappen:
 
