--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -264,18 +264,13 @@ blote handen uitrekenden!
 
 ## Samengevat
 
-<Attention>
-
-De afgeleide in $x = a$ berekenen
-
+<Attention title="De afgeleide in $x = a$ berekenen">
 
 De afgeleide in $x = a$ van een functie $f(x)$ is gedefinieerd als:
-
 
 $$
 f'(a) = \lim_{\Delta x \to 0} \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}
 $$
-
 
 Voor een bepaalde $a$ kan je deze limiet kan je als volgt uitrekenen:
 
