--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -191,10 +191,7 @@ afgeleide te vinden**. Hier leren we later meer over!
 
 ## Samengevat
 
-<Attention>
-
-De afgeleide functie van een functie
-
+<Attention title="De afgeleide functie van een functie">
 
 De afgeleide functie $f'(x)$ is de functie die voor elke x-waarde (waarin
 $f(x)$ afleidbaar is) de afgeleide van $f(x)$ in die x-waarde geeft.
