--- a/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
@@ -171,9 +171,7 @@ in $x = a$**.
 
 ## Samengevat
 
-<Attention>
-
-De afgeleide als de rico van een raaklijn
+<Attention title="De afgeleide als de rico van een raaklijn">
 
 
 De afgeleide van $f(x)$ in $x = a$ berekent de **rico van de raaklijn** aan de
