--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -128,10 +128,7 @@ $-4x^\orange{2}y^\blue{3}$, bijvoorbeeld, is van de
 
 ## Samengevat
 
-<Attention>
-
-Wat is een eenterm?
-
+<Attention title="Wat is een eenterm?">
 
 -   Een **eenterm** is een product van getallen en variabelen.
 -   De **getallen en het toestandsteken** vormen de **coëfficiënt** van de eenterm.
@@ -141,9 +138,7 @@ Wat is een eenterm?
 
 </Attention>
 
-<Attention>
-
-Gelijksoortige eentermen
+<Attention title="Gelijksoortige eentermen">
 
 Twee eentermen zijn **gelijksoortig** als en slechts als ze **hetzelfde
 lettergedeelte** hebben.
