--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -255,9 +255,7 @@ een macht.
 
 ## Samengevat
 
-<Attention>
-
-De macht van een eenterm berekenen
+<Attention title="De macht van een eenterm berekenen">
 
 Om de macht van een eenterm te berekenen, doen we het volgende:
 
@@ -268,9 +266,7 @@ Om de macht van een eenterm te berekenen, doen we het volgende:
 
 </Attention>
 
-<Attention>
-
-De wortel van een eenterm berekenen
+<Attention title="De wortel van een eenterm berekenen">
 
 De wortel van een eenterm berekenen we als volgt:
 
