--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -276,9 +276,7 @@ $$
 
 ## Samengevat
 
-<Attention>
-
-Eentermen vermenigvuldigen
+<Attention title="Eentermen vermenigvuldigen">
 
 Het vermenigvuldigen van eentermen gaat als volgt:
 
@@ -290,9 +288,7 @@ Het vermenigvuldigen van eentermen gaat als volgt:
 
 </Attention>
 
-<Attention>
-
-Eentermen delen
+<Attention title="Eentermen delen">
 
 Het delen van eentermen doe je ze:
 
