--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -174,9 +174,7 @@ Klaar! 🎉
 
 ## Samengevat
 
-<Attention>
-
-Eentermen optellen en aftrekken
+<Attention title="Eentermen optellen en aftrekken">
 
 Eentermen bij elkaar optellen doe je zo:
 
