--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -361,9 +361,7 @@ Wat. Een. Prachtige. Eenterm. 😌
 
 ## Samengevat
 
-<Attention>
-
-Eentermen vereenvoudigen
+<Attention title="Eentermen vereenvoudigen">
 
 Het vereenvoudigen van eentermen doe je als volgt:
 
