--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -128,31 +128,23 @@ rechterkant. Je vindt dat $\green{bld f = [-6; +\infty[}$.
 
 ## Samengevat
 
-<Attention>
-
-Definitie domein
+<Attention title="Definitie domein">
 
 Het **domein van een functie** is de verzameling van alle mogelijke **x-waarden
 waarvoor er een functiewaarde bestaat**.
 </Attention>
 
-<Attention>
-
-Definitie beeld
+<Attention title="Definitie beeld">
 
 Het **beeld van een functie** is de verzameling van **alle mogelijke functiewaarden**.
 </Attention>
 
-<Attention>
-
-Domein aflezen op een grafiek
+<Attention title="Domein aflezen op een grafiek">
 
 Het **domein van een functie** lees je af op een grafiek door de grafiek te **projecteren op de x-as**.
 </Attention>
 
-<Attention>
-
-Beeld aflezen op een grafiek
+<Attention title="Beeld aflezen op een grafiek">
 
 Het **beeld van een functie** lees je af op een grafiek door de grafiek te **projecteren op de y-as**.
 </Attention>
