--- a/src/content/lessen/wiskunde/functies/intro/index.mdx
+++ b/src/content/lessen/wiskunde/functies/intro/index.mdx
@@ -50,9 +50,7 @@ en de $y$, doen we met een [functievoorschrift](voorschrift).
 
 ## Samengevat
 
-<Attention>
-
-Definitie van een functie
+<Attention title="Definitie van een functie">
 
 Een functie is een verband tussen twee variabelen $x$ en $y$ waarbij er voor
 iedere $x$ **hoogstens één** $y$ bestaat. Hierbij noemen we $x$ de **onafhankelijke
@@ -60,9 +58,7 @@ variabele** en $y$ de **afhankelijke variabele**.
 
 </Attention>
 
-<Attention>
-
-Naamgeving
+<Attention title="Naamgeving">
 
 -   $x$: ingang, onafhankelijke variabele
 -   $y$: uitgang, afhankelijke variabele, functiewaarde van $x$, beeld van $x$
