--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -179,18 +179,13 @@ Zorgen voor later! 👋
 
 ## Samengevat
 
-<Attention>
-
-Tekenschema
+<Attention title="Tekenschema">
 
 Het **tekenschema van een functie $f$** toont schematisch **het teken van $y$
 voor alle x-waarden** die in het domein van $f$ zitten.
 </Attention>
 
-<Attention>
-
-Tekenschema opstellen
-
+<Attention title="Tekenschema opstellen">
 
 1. Zet de **grenzen van het domein** in het tekenschema;
 2. Zoek alle **nulpunten** en zet ze tussen de grenzen van het domein;
