--- a/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
+++ b/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
@@ -180,10 +180,7 @@ $$
 $$
 
 
-<Attention>
-
-Verwar de haakjes niet met een vermenigvuldiging!
-
+<Attention title="Verwar de haakjes niet met een vermenigvuldiging!">
 
 Wanneer we "$f(2)$" schrijven, zou je kunnen denken dat we $f$ vermenigvuldigen
 met $2$. **Dat is niet zo!** De haakjes staan er om duidelijk te maken dat we
@@ -219,10 +216,7 @@ een bepaalde x-waarde**.
 
 </Attention>
 
-<Attention>
-
-De functiewaarde van een x-waarde vinden
-
+<Attention title="De functiewaarde van een x-waarde vinden">
 
 Je kan de **functiewaarde** (of y-waarde) van een bepaalde x-waarde $\orange{x}
 = \orange{a}$ vinden als volgt:
