--- a/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
@@ -110,10 +110,7 @@ Mat andere woorden is het **optellen van vectoren commutatief**.
 
 ## Samengevat
 
-<Attention>
-
-Kop-staartmethode
-
+<Attention title="Kop-staartmethode">
 
 Bij de kop-staartmethode tekenen we de som van twee vectoren door de **staart
 van de ene vector aan de kop van de andere** te leggen. Vervolgens tekenen we
@@ -123,10 +120,7 @@ een vector **van de vrije staart naar de vrije kop**.
 
 </Attention>
 
-<Attention>
-
-Parallellogram-methode
-
+<Attention title="Parallellogram-methode">
 
 Bij de parallellogram-methode tekenen we de som van twee vectoren door de
 **staarten van de vectoren op elkaar te leggen**. Vervolgens maken we een
