--- a/src/content/lessen/wiskunde/vector_1/intro/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/intro/index.mdx
@@ -95,10 +95,7 @@ intelligentie...
 
 ## Samengevat
 
-<Attention>
-
-Een vector is een pijl met een grootte, richting en zin
-
+<Attention title="Een vector is een pijl met een grootte, richting en zin">
 
 -   Een vector is een pijl en heeft een grootte, een richting en een zin;
 -   Wanneer twee vectoren dezelfde grootte, richting en zin hebben, zijn die
