--- a/src/content/lessen/wiskunde/vector_1/vectoriele_grootheden/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/vectoriele_grootheden/index.mdx
@@ -47,9 +47,7 @@ We noemen temperatuur en massa daarom **scalaire grootheden**. Ze hebben **enkel
 
 ## Samengevat
 
-<Attention>
-
-Vectoriële en scalaire grootheden
+<Attention title="Vectoriële en scalaire grootheden">
 
 **Vectoriële grootheden** zijn grootheden die naast een **grootte** ook een **richting** en een **zin** hebben.
 
