--- a/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
@@ -117,9 +117,7 @@ omdat het gelijk is aan $0$.
 
 De uitkomsten zijn samengevat in de onderstaande tabel.
 
-<Attention>
-
-Te onthouden
+<Attention title="Te onthouden">
 
 De drie **merkwaardige producten** zijn:
 
