--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -278,9 +278,7 @@ $$
 
 ## Samengevat
 
-<Attention>
-
-Veeltermen vereenvoudigen
+<Attention title="Veeltermen vereenvoudigen">
 
 Een veelterm kan je als volgt vereenvoudigen:
 
