--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -141,10 +141,7 @@ $$
 
 ## Samengevat
 
-<Attention>
-
-Omzetten naar macht van 10
-
+<Attention title="Omzetten naar macht van 10">
 
 -   Als je de komma $N$ plaatsen **naar rechts** wilt opschuiven:
     Vermenigvuldig met <span class="blue">$10^{N}$ om de komma op te schuiven</span> en met <span class="orange">$10^{-N}$ om het getal gelijk te houden</span>.
@@ -153,9 +150,7 @@ Omzetten naar macht van 10
 
 </Attention>
 
-<Attention>
-
-Omzetten van een macht van 10
+<Attention title="Omzetten van een macht van 10">
 
 Als je $a \cdot 10^b$ wilt omzetten naar $\ldots\text{iets}\ldots \cdot
 \blue{10^c}$ <Mute>(met $a, b, c \in \mathbb{R}$)</Mute>:
