--- a/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
@@ -126,9 +126,7 @@ hetzelfde aanvoelt qua gewicht als twee voetballen op aarde.
 
 ## Samengevat
 
-<Attention>
-
-Grootte van de zwaartekracht berekenen
+<Attention title="Grootte van de zwaartekracht berekenen">
 
 De grootte van de zwaartekracht op een voorwerp vind je door de massa van dat
 voorwerp te vermenigvuldigen met de zwaarteveldsterkte $g$.
