--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -150,9 +150,7 @@ y-coördinaat)</Mute>.  Dit kan je ook zien op onderstaande grafiek:
 
 ## Samengevat
 
-<Attention>
-
-Snijpunten van twee functies
+<Attention title="Snijpunten van twee functies">
 
 De **snijpunten** van twee functies $f(x)$ en $g(x)$ vind je door eerst de twee **[functievoorschriften](../functies/voorschrift) aan elkaar gelijk te stellen**:
 
@@ -166,9 +164,7 @@ $$
 De oplossing van deze vergelijking geeft de $x-$coördinaat van elk snijpunt. Als je elke $x-$coördinaat in $f(x)$ of $g(x)$ invult, krijg je de bijhorende $y-$coördinaat.
 </Attention>
 
-<Attention>
-
-Nulpunten van een functie
+<Attention title="Nulpunten van een functie">
 
 De **nulpunten** van een functie $f(x)$ vind je door het **[functievoorschrift](../functies/voorschrift) gelijk aan nul te stellen**:
 
