--- a/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
@@ -175,10 +175,7 @@ asymptoot is dus niet afleidbaar op de x-waarde waar de asymptoot zich bevindt.
 
 ## Samengevat
 
-<Attention>
-
-Afleidbaarheid van een functie
-
+<Attention title="Afleidbaarheid van een functie">
 
 Een functie is afleidbaar in $x = a$ als en slechts als de linker- en
 rechterafgeleide in $x = a$ **bestaan én gelijk** zijn.
@@ -196,10 +193,7 @@ $$
 
 </Attention>
 
-<Attention>
-
-Typische niet-afleidbare punten bij functies
-
+<Attention title="Typische niet-afleidbare punten bij functies">
 
 Volgende punten van een functie zijn nooit afleidbaar:
 
