--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -232,9 +232,7 @@ Het is belangrijk om in te zien dat deze alle drie **identiek dezelfde berekenin
 
 ## Samengevat
 
-<Attention>
-
-Wat is een differentiequotiënt?
+<Attention title="Wat is een differentiequotiënt?">
 
 Een differentiequotiënt zegt hoeveel de $\green{\text{functiewaarde}}$
 gemiddeld $\orange{\text{per x-eenheid}}$ verandert tussen een gekozen
