--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -413,9 +413,7 @@ te vermenigvuldigen met elke term van de andere veelterm.
 
 ## Samengevat
 
-<Attention>
-
-Het optellen van veeltermen
+<Attention title="Het optellen van veeltermen">
 
 Het **optellen** van twee veeltermen doe je zo:
 
@@ -424,9 +422,7 @@ Het **optellen** van twee veeltermen doe je zo:
 
 </Attention>
 
-<Attention>
-
-Het aftrekken van veeltermen
+<Attention title="Het aftrekken van veeltermen">
 
 Het **aftrekken** van twee veeltermen gaat zo:
 
@@ -435,9 +431,7 @@ Het **aftrekken** van twee veeltermen gaat zo:
 
 </Attention>
 
-<Attention>
-
-Een veelterm vermenigvuldigen met een eenterm
+<Attention title="Een veelterm vermenigvuldigen met een eenterm">
 
 Het **vermenigvuldigen** van een **veelterm met een eenterm** gaat als volgt:
 
@@ -448,9 +442,7 @@ Het **vermenigvuldigen** van een **veelterm met een eenterm** gaat als volgt:
 
 </Attention>
 
-<Attention>
-
-Een veelterm delen door een eenterm
+<Attention title="Een veelterm delen door een eenterm">
 
 Het **delen van een veelterm door een eenterm** doen we als volgt:
 
@@ -461,9 +453,7 @@ Het **delen van een veelterm door een eenterm** doen we als volgt:
 
 </Attention>
 
-<Attention>
-
-Een veelterm vermenigvuldigen met een andere veelterm
+<Attention title="Een veelterm vermenigvuldigen met een andere veelterm">
 
 Twee veeltermen met elkaar te vermenigvuldigen, doen we zo:
 
