--- a/src/content/lessen/wiskunde/veeltermen/veelterm/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/veelterm/index.mdx
@@ -77,16 +77,12 @@ Enkele andere voorbeelden (controleer ze zelf ook eens):
 
 ## Samengevat
 
-<Attention>
-
-Wat is een veelterm?
+<Attention title="Wat is een veelterm?">
 
 Een **veelterm** is een **som van twee of meerdere eentermen**. De eentermen waaruit een veelterm bestaat, noemen we kortweg de **termen** van de veelterm.
 </Attention>
 
-<Attention>
-
-Graad van een veelterm
+<Attention title="Graad van een veelterm">
 
 De graad van een veelterm is gelijk aan de **graad van de term met de hoogste graad** in de veelterm.
 
